welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not enough arguments for method growFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	    growFlowers();
                       ^FlowerPot:3: error: value c is not a member of object java.awt.Color
{setCouleurBrosse(Color. c)
                         ^FlowerPot:20: error: not found: type red
growFlowers(c: red) 
               ^